@@ -1,5 +1,4 @@
-using System;
-using System.Collections;
+using System.Collections.Generic;
 
 namespace NHibernate.UserTypes
 {
@@ -14,6 +13,6 @@ namespace NHibernate.UserTypes
 		/// Gets called by Hibernate to pass the configured type parameters to 
 		/// the implementation.
 		/// </summary>
-		void SetParameterValues(IDictionary parameters);
+		void SetParameterValues(IDictionary<string, string> parameters);
 	}
 }
